--- a/game-hide-ship.html
+++ b/game-hide-ship.html
@@ -9,11 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@600&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="https://code.jquery.com/jquery-migrate-3.0.0.min.js"></script>
+    <script src="gamefuncs.js" type="text/javascript"></script>
+    <script src="skulpt/skulpt_mods.js" type="text/javascript"></script>
+    <script src="skulpt/skulpt_lib.js" type="text/javascript"></script>
+    
 </head>
 
 <body>
-    <script src="skulpt/cust-skulpt.js" type="text/javascript"></script>
+    <script src="skulpt/skulpt_init.js" type="text/javascript"></script>
     <div id="errorMessage"></div>
     <div id='canvas'></div>
     <script>
@@ -113,14 +116,14 @@ for i in range(0,20):
     animate_y(image, -100, 1200, "infinite", True, 100);  
     animate_x(image, random_x, 200, "infinite", True, 200); 
     pause_time(.5) 
-'''
+
 # If an alien hits your ship, you lose
 # If an alien hits a platform, aliens get 1 point    
 for alien in aliens:                
     detect_collision(alien, player_ship, alien_victory)
     for platform in platforms:
         detect_collision(platform, alien, alien_bomb_platform)
-'''
+
 
 # Initialize, print, and position scores  
 player_score = 0
