--- a/game.html
+++ b/game.html
@@ -9,11 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@600&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-    <script src="https://code.jquery.com/jquery-migrate-3.0.0.min.js"></script>
+    <script src="gamefuncs.js" type="text/javascript"></script>
+    <script src="skulpt/skulpt_mods.js" type="text/javascript"></script>
+    <script src="skulpt/skulpt_lib.js" type="text/javascript"></script>
+    
 </head>
 
 <body>
-    <script src="skulpt/cust-skulpt.js" type="text/javascript"></script>
+    <script src="skulpt/skulpt_init.js" type="text/javascript"></script>
     <div id="errorMessage"></div>
     <div id='canvas'></div>
     <script>
@@ -24,6 +27,7 @@
 
 # STUDENTS: Type your own game code below
 # Do not edit outside of this area 
+
 
 
 
