--- a/game.html
+++ b/game.html
@@ -19,25 +19,8 @@
     <script src="skulpt/skulpt_init.js" type="text/javascript"></script>
     <div id="errorMessage"></div>
     <div id='canvas'></div>
-    <script>
-        var prog =
-            `start()
-######################## DO NOT EDIT ABOVE THIS LINE ###################                
-######################## PYTHON CODE BELOW #############################            
-
-# STUDENTS: Type your own game code below
-# Do not edit outside of this area 
-
-
-
-
-
-
-################################ PYTHON CODE ABOVE ############################# 
-################################ DO NOT EDIT BELOW THIS LINE ############################# 
-
-`;
-        readyCompiler(prog);</script>
+    <script src="./final-game-code.js"></script>
+    <script>readyCompiler('start()\n' + cfa_final_game_code);</script>
 </body>
 
 </html>
